--- a/app/src/main/res/layout/item_symptom.xml
+++ b/app/src/main/res/layout/item_symptom.xml
@@ -5,11 +5,15 @@
     android:layout_height="wrap_content">
     <!-- item_symptom.xml -->
 
+
+
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:orientation="horizontal"
-        android:padding="8dp"
+        android:padding="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -23,6 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
+            android:layout_weight="1"
             android:text="I just want someone to talk to"
             android:textColor="@android:color/black"
             android:textSize="16sp" />
@@ -31,12 +36,18 @@
             android:id="@+id/checkboxSymptom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="16dp"
             android:checked="false" />
 
 
     </LinearLayout>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintTop_toBottomOf="@id/linearLayout2"
+        android:background="@color/divider_color" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
