--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginVertical="10dp"
-            android:text="Mumblu"
-            android:textSize="24sp"
+            android:text="mimblu"
+            android:fontFamily="@font/neue_plak_black"
+            android:textColor="@color/orange"
+            android:textSize="26sp"
             android:textStyle="bold" />
 
         <TextView
@@ -72,7 +74,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="Show me my matches" />
 
     </RelativeLayout>
