--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -9,7 +9,7 @@
             android:id="@+id/recyclerViewMatchOptions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/linearLayout"
+            android:layout_below="@id/optionll"
             android:clipToPadding="false"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
@@ -33,20 +33,95 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:padding="8dp" />
+
     <TextView
         android:id="@+id/textViewDiscription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mimblu is up to 5x cheaper"
-        android:textSize="16sp"
-        android:padding="4dp" />
+        android:textSize="16sp" />
+
     <TextView
         android:id="@+id/textViewDiscriptionline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="than in-person therapy"
-        android:textSize="16sp"
-        android:padding="4dp" />
+        android:textSize="16sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/optionll"
+        android:layout_marginTop="5dp"
+        android:layout_width="match_parent"
+        android:layout_below="@id/linearLayout"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="70dp"
+            android:layout_marginHorizontal="20dp"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="55dp"
+                android:layout_height="20dp"
+                android:textSize="16sp"
+                android:text="mimblu"
+                android:textStyle="bold"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:src="@drawable/lite"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="55dp"
+                android:layout_height="20dp"
+                android:textSize="16sp"
+                android:text="mimblu"
+                android:textStyle="bold"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:src="@drawable/plus"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="55dp"
+                android:layout_height="20dp"
+                android:textSize="16sp"
+                android:text="mimblu"
+                android:textStyle="bold"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="22dp"
+                android:src="@drawable/live"/>
+
+        </LinearLayout>
+
+
+
+
+
 
     </LinearLayout>
 
