--- a/app/src/main/res/layout/item_match_option.xml
+++ b/app/src/main/res/layout/item_match_option.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:elevation="10dp"
     app:cardCornerRadius="15dp"
-    android:layout_margin="8dp">
+    android:layout_margin="8dp"
+    android:foreground="@drawable/cardview_border"
+    app:cardElevation="4dp">
 
     <!-- item_match_option.xml -->
 
@@ -26,6 +28,7 @@
         <TextView
             android:id="@+id/textViewDescription"
             android:layout_width="wrap_content"
+            android:textStyle="bold"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp" />
 
@@ -33,6 +36,7 @@
             android:id="@+id/textViewDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_marginTop="4dp" />
 
         <TextView
@@ -45,7 +49,20 @@
             android:id="@+id/textViewPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textStyle="bold"
             android:layout_marginTop="4dp" />
+
+        <Button
+            android:id="@+id/buttonShowMatches"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            android:text="Continue" />
+
+
 
     </LinearLayout>
 
